--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Usuarios</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">,
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.2.0/css/bootstrap.min.css">
+
 </head>
 <body>
   <app-root></app-root>
